tests/paczka1/small_fuzzy/59766906.err
Error in line 1: j8a5Vl A282 46,1
Error in line 6: eeXvnGZ A898 65,3
Error in line 5: j8a5Vl A898 5,1
